--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,37 @@
+black==25.9.0
 certifi==2025.10.5
 charset-normalizer==3.4.4
+click==8.3.0
+contourpy==1.3.3
+cycler==0.12.1
+filelock==3.20.0
+fonttools==4.60.1
+fsspec==2025.9.0
 idna==3.11
+isort==7.0.0
+Jinja2==3.1.6
 kagglehub==0.3.13
+kiwisolver==1.4.9
+MarkupSafe==3.0.3
+matplotlib==3.10.7
+mpmath==1.3.0
+mypy_extensions==1.1.0
+networkx==3.5
 numpy==2.3.4
 packaging==25.0
+pathspec==0.12.1
+pillow==12.0.0
+platformdirs==4.5.0
+pyparsing==3.2.5
+python-dateutil==2.9.0.post0
+pytokens==0.2.0
 PyYAML==6.0.3
 requests==2.32.5
+ruff==0.14.2
+setuptools==80.9.0
+six==1.17.0
+sympy==1.14.0
+torch==2.9.0
 tqdm==4.67.1
+typing_extensions==4.15.0
 urllib3==2.5.0
