--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,8 @@ distlib==0.4.0
 filelock==3.20.0
 fonttools==4.60.1
 fsspec==2025.9.0
+hf-xet==1.2.0
+huggingface-hub==0.36.0
 identify==2.6.15
 idna==3.11
 isort==7.0.0
@@ -32,14 +34,18 @@ python-dateutil==2.9.0.post0
 pytokens==0.2.0
 pytoolconfig==1.3.1
 PyYAML==6.0.3
+regex==2025.10.23
 requests==2.32.5
 rope==1.14.0
 ruff==0.14.2
+safetensors==0.6.2
 setuptools==80.9.0
 six==1.17.0
 sympy==1.14.0
+tokenizers==0.22.1
 torch==2.9.0
 tqdm==4.67.1
+transformers==4.57.1
 typing_extensions==4.15.0
 urllib3==2.5.0
 virtualenv==20.35.4
